--- a/miniprogram/pages/me/me.wxml
+++ b/miniprogram/pages/me/me.wxml
@@ -50,7 +50,7 @@
       <view>邀请好友</view>
     </view>
     <view class='right' bindtap='clickInvitivation'>
-      <text class='opr'>一起来玩~</text>></view>
+      <text class='opr'>一起来玩</text>></view>
   </view>
   <view class='hr'></view>
   <!-- 产品意见 -->
