--- a/miniprogram/pages/replay/replay.wxml
+++ b/miniprogram/pages/replay/replay.wxml
@@ -2,13 +2,13 @@
 <view class="content">
   <view class="text-content">
     <view class='input-content'>
-      <input bindinput="bindKeyInput" placeholder="开始你的表演~" />
+      <input bindinput="bindKeyInput" placeholder="评论内容" />
     </view>
 
   </view>
 
   <view class='btn-func'>
-    <button class="btn" bindtap='saveReplay' open-type="getUserInfo">发射神评</button>
+    <button class="btn" bindtap='saveReplay' open-type="getUserInfo">提交评论</button>
   </view>
 
 </view>
