--- a/miniprogram/pages/advance/advance.wxml
+++ b/miniprogram/pages/advance/advance.wxml
@@ -1,19 +1,7 @@
 <!--miniprogram/pages/advance/advance.wxml-->
 <!-- new line -->
-<view class="content">
-  <form bindsubmit="formSubmit">
-    <view class="text-content">
-      <view class='input-content'>
-        <input placeholder="建议标题" />
-      </view>
-      <view class='text-area'>
-        <textarea name="input-content" type="text" placeholder="对问题的详细描述" value="{{textContent}}" bindblur='getTextAreaContent'></textarea>
-      </view>
-    </view>
-
-    <view class='btn-func'>
-      <button class="btn" formType='submit' open-type="getUserInfo">提交意见</button>
-    </view>
-  </form>
-
-</view>
+<text>\n</text>
+<text>\n</text>
+<view>联系微信：{{contents}} </view>
+<text>\n</text>
+<button class="btn"  bindtap='copyText' data-text="{{contents}}">复制</button>
